--- a/site/index.html
+++ b/site/index.html
@@ -39,9 +39,10 @@
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="/registration">Cadastre-se</a></li>
-								<li><a href="/login">Login</a></li>
+								<li><a id="loginorprofile" href="/login">Login</a></li>
 							</ul>
 						</div><!-- /.navbar-collapse -->
+						
 					</div><!-- /.container-fluid -->
 				</nav>
 			</header>
