--- a/site/login.html
+++ b/site/login.html
@@ -54,7 +54,7 @@
 					<div class="login-area">
 						<!-- cabeçalho login -->
 						<h3>Entre, com sua conta</h3>
-						<form role="form" id="login-form" action="/logar" method="POST"> <!--FAZER O LOGIN-->
+						<form role="form" id="login-form" action="/logar" method="POST"> 
 							<div class="form-group">
 								<input type="text" name="email" class="form-control" id="exampleInputUser1" placeholder="Email">
 							</div>
