--- a/site/index.html
+++ b/site/index.html
@@ -38,11 +38,10 @@
 						<!-- configuração do menu -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="/registration">Cadastre-se</a></li>
-								<li><a id="loginorprofile" href="/login">Login</a></li>
+								<li><a href="registration.html">Cadastre-se</a></li>
+								<li><a href="login.html">Login</a></li>
 							</ul>
 						</div><!-- /.navbar-collapse -->
-						
 					</div><!-- /.container-fluid -->
 				</nav>
 			</header>
@@ -114,7 +113,7 @@
 								<!-- imagem do livro -->
 								<img class="img-responsive" src="static/img/event/livroazul.jpg" alt="Events" />
 								<!-- titulo -->
-								<h4><a href="#">O fabuloso livro Azul</a></h4>
+								<h4><a href="livroAzul.html">O fabuloso livro Azul</a></h4>
 								<!-- descrição -->
 								<span class="sub-text" id="subPreco">Por apenas R$ 19,90</span>
 								<span class="sub-text">Estoque disponivel</span>
@@ -128,7 +127,7 @@
 								<!-- imagem do livro -->
 								<img class="img-responsive" src="static/img/event/livrovermelho.jpg" alt="Events" />
 								<!-- titulo -->
-								<h4><a href="#">O fabuloso livro Vermelho</a></h4>
+								<h4><a href="livroVerm.html">O fabuloso livro Vermelho</a></h4>
 								<!-- descrição -->
 								<span class="sub-text">Por apenas R$ 19,90</span>
 								<span class="sub-text">Estoque disponivel</span>
@@ -142,7 +141,7 @@
 								<!-- imagem do livro -->
 								<img class="img-responsive" src="static/img/event/livroamarelo.jpg" alt="Events" />
 								<!-- titulo -->
-								<h4><a href="#">o Fabuloso livro Amarelo</a></h4>
+								<h4><a href="livroAm.html">o Fabuloso livro Amarelo</a></h4>
 								<!-- descrição -->
 								<span class="sub-text">Por apenas R$ 19,90</span>
 								<span class="sub-text">Estoque disponivel</span>
@@ -169,7 +168,7 @@
 								<!-- imagem do livro -->
 								<img class="img-responsive" src="static/img/destaque/livroverde.jpg" alt="livraria" height = "45%" width= "70%" />
 								<!-- titulo-->
-								<h3><a href="#">O fabuloso livro verde </a></h3>
+								<h3><a href="livroVerde.html">O fabuloso livro verde </a></h3>
 								<!-- informações -->
 								<span class="sub-text">Por apenas R$ 19,90</span><br>
 								<span class="sub-text">Estoque disponivel</span>
@@ -183,7 +182,7 @@
 								<!-- imagem do livro -->
 								<img class="img-responsive" src="static/img/destaque/livroamarelo.jpg" alt="livraria" height = "40%" width= "70%" />
 								<!-- Titulo -->
-								<h3><a href="#">O fabuloso livro laranja que é amarelo</a></h3>
+								<h3><a href="livroLar.html">O fabuloso livro laranja que é amarelo</a></h3>
 								<!-- informações -->
 								<span class="sub-text">Por apena R$ 19,90</span><br>
 								<span class="sub-text">Estoque disponivel</span>
