--- a/site/login.html
+++ b/site/login.html
@@ -38,9 +38,9 @@
 						<!-- transição e config menu -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="/registration">Cadastre-se</a></li>
-								<li><a href="/login">Login</a></li>
-								<li><a href="/index">Inicio</a></li>
+								<li><a href="registration.html">Cadastre-se</a></li>
+								<li><a href="login.html">Login</a></li>
+								<li><a href="index.html">Inicio</a></li>
 							</ul>
 						</div><!-- navbar-collapse final -->
 					</div><!-- /.container-fluid final -->
@@ -54,7 +54,7 @@
 					<div class="login-area">
 						<!-- cabeçalho login -->
 						<h3>Entre, com sua conta</h3>
-						<form role="form" id="login-form" action="/logar" method="POST"> 
+						<form role="form" id="login-form" action="/logar" method="POST"> <!--FAZER O LOGIN-->
 							<div class="form-group">
 								<input type="text" name="email" class="form-control" id="exampleInputUser1" placeholder="Email">
 							</div>
