--- a/site/registration.html
+++ b/site/registration.html
@@ -39,9 +39,9 @@
 						<!-- transição entre as páginas-->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="/registration">Cadastre-se</a></li>
-								<li><a href="/login">Login</a></li>
-								<li><a href="/index">Inicio</a></li>
+								<li><a href="registration.html">Cadastre-se</a></li>
+								<li><a href="login.html">Login</a></li>
+								<li><a href="index.html">Inicio</a></li>
 							</ul>
 						</div><!-- navbar final  -->
 					</div><!-- container-fluid final -->
